deploy/kyverno-verify-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-ledger-images
spec:
  validationFailureAction: Enforce
  background: false
  webhookConfiguration:
    timeoutSeconds: 30
  rules:
    - name: verify-ledger-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - payments
      verifyImages:
        - imageReferences:
            - "192.168.56.20:5000/ledger-api:*"
          mutateDigest: true
          verifyDigest: true
          required: true
          attestors:
            - count: 1
              entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEbDA1BukIhYfkKOElOfKaASzzFlkW
[...]
                      -----END PUBLIC KEY-----
